# diffsol_python_benchmark

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
bench/: bench.py  casadi_diffsol.py  diffrax_diffsol.py  pybamm_diffsol.py
diffsol_python_benchmark/: __init__.py  casadi_models.py  diffrax_models.py  diffsol_models.py
src/: lib.rs
test/: test_pybamm.py  test_solve.py
