[package]
name = "diffsol_python_benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "diffsol_python_benchmark"
crate-type = ["cdylib"]

[features]
diffsol-llvm = []
diffsol-llvm15 = ["diffsol/diffsl-llvm15", "diffsol-llvm"]
diffsol-llvm16 = ["diffsol/diffsl-llvm16", "diffsol-llvm"]
diffsol-llvm17 = ["diffsol/diffsl-llvm17", "diffsol-llvm"]
diffsol-llvm18 = ["diffsol/diffsl-llvm18", "diffsol-llvm"]

[dependencies]
diffsol = { version = "0.5.1", features = ["diffsl"] }
faer = "0.19.4"
nalgebra = "0.33.2"
numpy = "0.23.0"
pyo3 = "0.23.1"
