[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "diffsol_python_benchmark"
version = "0.0.1"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "pybamm",
    "numpy",
    "scipy",
    "casadi",
    "diffrax",
]

[tool.maturin]
features = ["pyo3/extension-module"]

[project.optional-dependencies]
dev = [
    "pytest",
]
